objects/copado__User_Story_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>copado__Metadata_API_Name__c</fullName>
        <label>Metadata API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Potential Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflict Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Metadata</relationshipLabel>
        <relationshipName>User_Story_Metadata</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Story Metadata</label>
    <nameField>
        <label>User Story Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>